RESOLVED FIXED131832
AX: Row span info is wrong for table cells when a footer section is placed above a body section
https://bugs.webkit.org/show_bug.cgi?id=131832
Summary AX: Row span info is wrong for table cells when a footer section is placed ab...
chris fleizach
Reported 2014-04-17 17:54:47 PDT
See the attachment in https://bugs.webkit.org/show_bug.cgi?id=131819 The rowIndexes are wrong for the cells in the body because they are being offset by the footer offset which is wrong
Attachments
patch (14.46 KB, patch)
2014-04-19 00:25 PDT, chris fleizach
no flags
patch (14.01 KB, patch)
2014-04-19 00:29 PDT, chris fleizach
buildbot: commit-queue-
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 (462.91 KB, application/zip)
2014-04-19 01:24 PDT, Build Bot
no flags
Archive of layout-test-results from webkit-ews-02 for mac-mountainlion (498.03 KB, application/zip)
2014-04-19 01:46 PDT, Build Bot
no flags
Archive of layout-test-results from webkit-ews-05 for mac-mountainlion (497.11 KB, application/zip)
2014-04-19 02:46 PDT, Build Bot
no flags
patch (14.18 KB, patch)
2014-04-19 18:45 PDT, chris fleizach
no flags
patch (13.72 KB, patch)
2014-04-27 12:31 PDT, chris fleizach
buildbot: commit-queue-
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2 (514.58 KB, application/zip)
2014-04-27 13:29 PDT, Build Bot
no flags
Archive of layout-test-results from webkit-ews-05 for mac-mountainlion (546.31 KB, application/zip)
2014-04-27 13:49 PDT, Build Bot
no flags
Archive of layout-test-results from webkit-ews-07 for mac-mountainlion (547.90 KB, application/zip)
2014-04-27 14:55 PDT, Build Bot
no flags
patch (14.07 KB, patch)
2014-04-28 10:30 PDT, chris fleizach
mario: review+
Radar WebKit Bug Importer
Comment 1 2014-04-17 17:55:38 PDT
chris fleizach
Comment 2 2014-04-19 00:25:47 PDT
WebKit Commit Bot
Comment 3 2014-04-19 00:26:42 PDT
Attachment 229726 [details] did not pass style-queue: ERROR: Source/WebCore/accessibility/AccessibilityARIAGrid.cpp:57: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/WebCore/accessibility/AccessibilityTable.cpp:395: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] Total errors found: 2 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
chris fleizach
Comment 4 2014-04-19 00:29:56 PDT
Build Bot
Comment 5 2014-04-19 01:24:19 PDT
Comment on attachment 229727 [details] patch Attachment 229727 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/5765152334938112 New failing tests: accessibility/table-with-footer-section-above-body.html
Build Bot
Comment 6 2014-04-19 01:24:22 PDT
Created attachment 229728 [details] Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-15 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 7 2014-04-19 01:46:07 PDT
Comment on attachment 229727 [details] patch Attachment 229727 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/6491786126032896 New failing tests: accessibility/table-with-footer-section-above-body.html
Build Bot
Comment 8 2014-04-19 01:46:10 PDT
Created attachment 229730 [details] Archive of layout-test-results from webkit-ews-02 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-02 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 9 2014-04-19 02:46:10 PDT
Comment on attachment 229727 [details] patch Attachment 229727 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/6750314753425408 New failing tests: accessibility/table-with-footer-section-above-body.html
Build Bot
Comment 10 2014-04-19 02:46:14 PDT
Created attachment 229732 [details] Archive of layout-test-results from webkit-ews-05 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-05 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Darin Adler
Comment 11 2014-04-19 15:07:47 PDT
Comment on attachment 229727 [details] patch Added test case is failing on the build bots.
chris fleizach
Comment 12 2014-04-19 18:45:41 PDT
Created attachment 229751 [details] patch I think the test was failing because I had some reliances on the two other table related patches I recently submitted
chris fleizach
Comment 13 2014-04-27 12:31:16 PDT
Build Bot
Comment 14 2014-04-27 13:29:39 PDT
Comment on attachment 230263 [details] patch Attachment 230263 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/4722058458038272 New failing tests: fast/events/shadow-event-path-2.html fast/events/shadow-event-path.html accessibility/table-with-footer-section-above-body.html
Build Bot
Comment 15 2014-04-27 13:29:42 PDT
Created attachment 230266 [details] Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-11 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 16 2014-04-27 13:49:05 PDT
Comment on attachment 230263 [details] patch Attachment 230263 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/4562832209215488 New failing tests: fast/events/shadow-event-path-2.html fast/events/shadow-event-path.html accessibility/table-with-footer-section-above-body.html
Build Bot
Comment 17 2014-04-27 13:49:08 PDT
Created attachment 230267 [details] Archive of layout-test-results from webkit-ews-05 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-05 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 18 2014-04-27 14:55:01 PDT
Comment on attachment 230263 [details] patch Attachment 230263 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/5329837669482496 New failing tests: fast/events/shadow-event-path-2.html fast/events/shadow-event-path.html accessibility/table-with-footer-section-above-body.html
Build Bot
Comment 19 2014-04-27 14:55:05 PDT
Created attachment 230268 [details] Archive of layout-test-results from webkit-ews-07 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-07 Port: mac-mountainlion Platform: Mac OS X 10.8.5
chris fleizach
Comment 20 2014-04-28 10:30:20 PDT
Mario Sanchez Prada
Comment 21 2014-04-29 06:25:22 PDT
Comment on attachment 230304 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=230304&action=review > Source/WebCore/accessibility/AccessibilityARIAGrid.cpp:118 > + Extra blank line
chris fleizach
Comment 22 2014-04-29 09:16:02 PDT
Note You need to log in before you can comment on or make changes to this bug.